# nodeline-python-package

./: .editorconfig  .flakehell.toml  .gitignore  README.md  cookiecutter.json  dodo.py  noxfile.py  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
nodeline_python_package/: doit.py  nox.py
styles/: black.toml  commitizen.toml  flake8.toml  flakehell.toml  isort.toml  mypy.toml  nitpick-style-nodeline.toml  pre-commit-hooks.toml  pre-commit-tox.toml
tests/: conftest.py  test_project_generation.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  README.md  dodo.py  mkdocs.yml  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.project_name}}/.github/workflows/: publish_docs.yml
{{cookiecutter.project_name}}/docs/: gen_api_nav.py
{{cookiecutter.project_name}}/tests/: test_import.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name.lower().replace('-', '_')}}/tests/: test_import.py
