[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.project_description }}"
version = "0.1.0"
license = "{{ cookiecutter.license|upper }}"

authors = []

readme = "README.md"

repository = "https://github.com/{{ cookiecutter.organization }}/{{ cookiecutter.project_name }}"

keywords = []

[tool.nitpick]
style = "https://raw.githubusercontent.com/PyNodeLine/nodeline-python-package/main/styles/nitpick-style-nodeline.toml"

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.dev-dependencies]
mypy = "^0.950"
commitizen = "^2.20.0"
pre-commit = "^2.15.0"
pre-commit-hooks = "^4.2.0"
pytest = "^4.6"
pytest_cov = "^2.1"
pytest-qt = "^3.3.0"
toml = "^0.10.2"
wemake-python-styleguide = "^0.16"
flakehell = "^0.9.0"
flake8 = "3.9.0"
pylint = "^2.12.1"
autoflake = "^1.4"
black = "^22.3.0"
isort = "^5.10.1"
doit = "^0.36.0"
nitpick = "^0.32"


